Fixed usages of deprecated wrapper types constructors
Include changes for:
- core/camel-core
- camel-bindy
- camel-cxf
- camel-gora
- camel-jclouds
- camel-netty-http
- camel-spring
- camel-spring-ws